# lambertians

./: .gitignore  README.md  commit-history.txt  docker-compose.yml  implementation_spec.md  lambertian-witness-spec.md  lambertian_foundation.md  manifesto.md  postmortem_l32.py  postmortem_l32b.py  postmortem_l32c.py  progress.md  pyproject.toml  technical.md
.claude/: settings.local.json
.github/: copilot-instructions.md
config/: instance_constitution.md  universe.toml
config/workspace_scaffold/: WORKSPACE.md
infra/docker/: agent.Dockerfile  eos-compliance.Dockerfile  graveyard.Dockerfile  pain-monitor.Dockerfile
scripts/: reset-fresh.ps1  reset-hard.ps1
src/lambertian/bootstrap/: agent_bootstrap.py  component_factory.py
src/lambertian/configuration/: instance_policy.py  loader.py  policy_loader.py  universe_config.py  validator.py
src/lambertian/contracts/: __init__.py  compliance_records.py  pain_protocol.py  pain_records.py  tool_records.py  turn_records.py
src/lambertian/entrypoints/: agent_loop.py  env_monitor.py  eos_compliance.py  graveyard.py  pain_monitor.py  postmortem.py
src/lambertian/env_monitor/: __init__.py  aggregator.py  models.py  monitor_service.py  sensor.py  writer.py
src/lambertian/eos_compliance/: __init__.py  app.py  compliance_log.py  inspector.py  rule_checkers.py
src/lambertian/event_stream/: event_log_writer.py
src/lambertian/fitness/: cursor_state.py  event_reader.py  (+4 more)
tests/: conftest.py
witness/: package-lock.json  package.json  tsconfig.json
witness/src/: docker-reader.ts  log-parser.ts  main.tsx  state.ts
(+107 files in other folders)
