[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambertian"
version = "0.1.0"
description = "Constitutional AI lifeform architecture — Phase 1"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "chromadb>=0.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psutil>=6.0",
    "pynvml>=11.0",
    "winsdk>=1.0.0b9; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lambertian-agent        = "lambertian.entrypoints.agent_loop:main"
lambertian-pain-monitor = "lambertian.entrypoints.pain_monitor:main"
lambertian-eos-compliance = "lambertian.entrypoints.eos_compliance:main"
lambertian-graveyard    = "lambertian.entrypoints.graveyard:main"
lambertian-postmortem   = "lambertian.entrypoints.postmortem:main"
lambertian-env-monitor  = "lambertian.entrypoints.env_monitor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lambertian"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
warn_return_any        = true
warn_unused_ignores    = true
no_implicit_reexport   = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"
